--- a/counter/inidex.html
+++ b/counter/inidex.html
@@ -34,6 +34,6 @@
         </div>
         </div>
         <div id="output"></div>
-        <script src="Counter.js"></script>
+        <script src="script.js"></script>
 </body>
 </html>
