--- a/CountdownTimer/index.html
+++ b/CountdownTimer/index.html
@@ -4,8 +4,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <img src="iphone.jpeg" alt="iPhone image">
+        <div class="box1">
+            <h1>OLD IPHONE GIVEAWAY</h1>
+            <p class="giveaway"><b>Giveaway Ends On Thursday, 13 June 2024 11:30am</b></p>
+            <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit <br> molestiae cum libero atque ut voluptate qui consectetur aliquid incidunt<br> voluptatem quos, dolore, non commodi quaerat aliquam eligendi,<br> quisquam totam blanditiis.</p>
+
+            <div class="allbox deadline">
+                <div class="box2"><h1 class="a" id="days">09</h1>DAYS</div>
+                <div class="box2"><h1 class="a" id="hours">12</h1>HOURS</div>
+                <div class="box2"><h1 class="a" id="minutes">34</h1>MINS</div>
+                <div class="box2"><h1 class="a" id="seconds">46</h1>SECS</div>
+            </div>
+        </div>
+    </div>
+    <script>
+        const months = [
+            'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August',
+            'September', 'October', 'November', 'December'
+        ];
+        const weekdays = [
+            'Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'
+        ];
+
+        const giveaway = document.querySelector('.giveaway');
+        const deadline = document.querySelector('.deadline');
+        const items = document.querySelectorAll('.a');
+
+        const futureDate = new Date(2024, 5, 13, 11, 30, 0); 
+
+        const year = futureDate.getFullYear();
+        const hours = futureDate.getHours();
+        const minutes = futureDate.getMinutes();
+
+        let month = futureDate.getMonth();
+        month = months[month];
+        const weekday = weekdays[futureDate.getDay()];
+        const date = futureDate.getDate();
+
+        giveaway.textContent = `Giveaway ends on ${weekday}, ${date} ${month} ${year} ${hours}:${minutes < 10 ? '0' + minutes : minutes}am`;
+
+        const futureTime = futureDate.getTime();
+
+        function getRemainingTime() {
+            const today = new Date().getTime();
+            const t = futureTime - today;
+
+            const oneDay = 24 * 60 * 60 * 1000;
+            const oneHour = 60 * 60 * 1000;
+            const oneMinute = 60 * 1000;
+
+            let days = Math.floor(t / oneDay);
+            let hours = Math.floor((t % oneDay) / oneHour);
+            let minutes = Math.floor((t % oneHour) / oneMinute);
+            let seconds = Math.floor((t % oneMinute) / 1000);
+
+            const values = [days, hours, minutes, seconds];
+
+            function format(item) {
+                if (item < 10) {
+                    return `0${item}`;
+                }
+                return item;
+            }
+
+            items.forEach(function(item, index) {
+                item.innerHTML = format(values[index]);
+            });
+
+            if (t < 0) {
+                clearInterval(countdown);
+                deadline.innerHTML = `<h4 class="expired">Sorry, this giveaway has expired!</h4>`;
+            }
+        }
+
+        let countdown = setInterval(getRemainingTime, 1000);
+        getRemainingTime();
+    </script>
 </body>
 </html>
